--- a/components/genericComponents/Experience/Experience.module.scss
+++ b/components/genericComponents/Experience/Experience.module.scss
@@ -12,7 +12,7 @@
 }
 
 .experiencedate {
-  background-color: $color-green-light;
+  background-color: $color-blue-mid;
   font-size: 16x;
   border-radius: 20px;
   padding: 5px 10px;
@@ -20,5 +20,5 @@
 }
 
 .experiencetitle {
-  @include very-small-title-font($color-red-normal);
+  @include very-small-title-font($color-blue-mid33);
 }
