--- a/components/genericComponents/Experience/Experience.module.scss
+++ b/components/genericComponents/Experience/Experience.module.scss
@@ -20,5 +20,5 @@
 }
 
 .experiencetitle {
-  @include very-small-title-font($color-blue-mid33);
+  @include very-small-title-font($color-blue-mid);
 }
